# dmp

./: CMakeLists.txt  README  package.xml  setup.py
scripts/: example_dmp.py
src/dmp/: data_collector.py  dmp_proc.py
