<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dmp</name>
  <version>0.0.0</version>
  <description>Implements Dynamic Movement Primitives in a robot agnostic way</description>

  <author>Scott Niekum</author>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/dmp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>common_msgs</exec_depend> <!-- nav_msgs, sensor_msgs, geometry_msgs -->
  <exec_depend>image_common</exec_depend>
  <exec_depend>ros</exec_depend>
  <exec_depend>ros_comm</exec_depend>  <!-- rospy, roscpp -->

  <build_depend>message_generation</build_depend>
  <build_depend>dmp_generate_messages</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dmp_generate_messages</exec_depend>

  <depend>custom_ros_tools</depend>
  <depend>python-numpy</depend>

</package>
